<resources>
    <string name="app_name">Oxcom</string>
    <!--Login-->
    <string name="bienvenido">Bienvenido</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="guia">GUÍA</string>
    <string name="efectos_adversos">EFECTOS ADVERSOS</string>
    <string name="recuperar_contraseña"><u>Recuperar contraseña</u></string>
    <string name="solicitar_acceso"><u>Solicitar Acceso</u></string>
    <string name="conectar">Conectar</string>

    <!--Guia de efectos adversos-->

    <string name="linea_terapeutica">Linea Terapéutica</string>
    <string name="title_guia_efectos_adversos">Guia de efectos adversos</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</string>

    <!--Detalle de Producto -->

    <string name="recomendacion">Recomendación</string>}
    <string name="recomendacion_desc">Se recomienda el control rutinario de la presion arterial
        durante la terapia. Se sugiere que este se debe realizar tanto
        antes como después de cada una de las primeras dosis de
        Avastin y luego antes de cada dosis. </string>
    <string name="grado1">Grado 1</string>
    <string name="grado2">Grado 2</string>
    <string name="grado3">Grado 3</string>
    <string name="grado4">Grado 4</string>
    <string name="criterio">Criterio</string>
    <string name="manejo">Manejo</string>

    <!--Reportar Evento Adverso -->
    <string name="desea_reportar">¿Desea reportar un Efecto Adverso?</string>
    <string name="text_desc_1">Para entregar esta información, usted
            debe ponerse en contacto con el departamento
            de Farmacovigilancia.</string>
    <string name="email_reporte">chile.farmacovigilancia@roche.com</string>
    <string name="enviar_ahora">Enviar Ahora</string>
    <string name="text_desc2">Tambien puede llamar directamente al\n<b>800 365 365</b></string>
    <string name="llamar_ahora">Llamar Ahora</string>
    <string name="politica_txt">Politica de información para reportar un EA.</string>
    <string name="reportar_efecto_adverso">Reportar un Efecto Adverso</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--Solicitar Acceso -->
    <string name="title_solictar_acceso">Solicitar\nAcceso</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_hint">Ingrese su nombre</string>
    <string name="apellido">Apellido</string>
    <string name="apellido_hint">Ingrese su apellido</string>
    <string name="rut">Rut</string>
    <string name="rut_hint">Ingrese su rut</string>
    <string name="email">Email</string>
    <string name="email_hint">Ingrese su email</string>
    <string name="confirmar_email">Confirmar Email</string>
    <string name="confirmar_email_hint">Confirme su email</string>
    <string name="volver">Volver</string>

    <!--Perfil de Usuario -->
    <string name="datos_usuario">Datos Usuario</string>
    <string name="solictar_soporte">Solictar Soporte</string>

    <!--Perfil de Usuario -->
    <string name="subject_solicitud_soporte">Solicitud de Soporte</string>
    <string name="dummie_email_body">
        Nombre: JAVIER PRADO\n
        Rut: 15780437-5\n
        Ingrese su mensaje:\n\n\n\n
        Javier Prado Echeverria\n
        Cel: 9 072 68 82
    </string>
    <string name="subject_reporte_evento">Reporte Evento Adverso</string>
    <string name="dummie_email_reporte">
        Ingrese evento a reportar:\n\n\n\n
        Javier Prado Echeverria\n
        Cel: 9 072 68 82
    </string>

    <string name="politicas_privacidad"><u>Politicas de Privacidad</u>.</string>
    <string name="roche_2018">2018 Roche Chile Ltda</string>
    <string name="roche_text">La información incluida en esta sección y en el\nresto de esta aplicación,
    es exclusiva para\nProfesionales de la Salud</string>

    <!--Recuperar contraseñna -->
    <string name="title_recuperar_contrasena">Recuperar\nContraseña</string>
    <string name="btn_recuperar">Recuperar</string>
</resources>
