<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000">


        <include
            android:id="@+id/includedAppBarTitle"
            layout="@layout/view_app_bar_grados"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/includedAppBarTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewRecomendacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMainTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/recomendacion"
            android:textColor="@color/title_color" />

        <View
            android:id="@+id/viewSeparator1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/textViewRecomendacion"
            android:layout_marginLeft="20dp"
            android:background="@android:color/black"></View>

        <TextView
            android:id="@+id/textViewRecomendacionDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewSeparator1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/recomendacion_desc" />

        <LinearLayout
            android:id="@+id/linearButtonsGrados"
            android:background="@drawable/bkg_linear_grados"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="1dp"
            android:layout_below="@+id/textViewRecomendacionDesc"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_grade1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/grado1"
                android:textAlignment="center"
                android:textColor="@drawable/selector_textcolor_grade_buttons"
                android:textAllCaps="false"

                android:background="@drawable/selector_bkg_grade_btn_left"
                android:layout_weight="1" />
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"></View>

            <Button
                android:id="@+id/btn_grade2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/grado2"
                android:textColor="@drawable/selector_textcolor_grade_buttons"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:background="@drawable/selector_bkg_grade_buttons"
                android:layout_weight="1" />
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"></View>

            <Button
                android:id="@+id/btn_grade3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/grado3"
                android:textAlignment="center"
                android:textColor="@drawable/selector_textcolor_grade_buttons"
                android:textAllCaps="false"
                android:background="@drawable/selector_bkg_grade_buttons"
                android:layout_weight="1" />
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"></View>

            <Button
                android:id="@+id/btn_grade4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/grado4"
                android:textAlignment="center"
                android:textColor="@drawable/selector_textcolor_grade_buttons"
                android:textAllCaps="false"
                android:background="@drawable/selector_bkg_grade_btn_right"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewCriterio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/criterio"
            android:textSize="15sp"
            android:textColor="@color/title_color"
            android:layout_below="@id/linearButtonsGrados"/>

        <TextView
            android:id="@+id/textViewCriterioDesc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/textViewCriterio"/>

        <TextView
            android:id="@+id/textViewManejo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/manejo"
            android:textColor="@color/title_color"
            android:textSize="15sp"
            android:layout_below="@id/textViewCriterioDesc"/>

        <TextView
            android:id="@+id/textViewManejoDesc"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/textViewManejo"/>
    </RelativeLayout>
</layout>
