<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.teravision.unicef.kidpower.activities.GuiaEfectosAdversosActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000">


        <include
            android:id="@+id/includedAppBarTitle"
            layout="@layout/view_app_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textTitleGuia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/includedAppBarTitle"
            android:text="@string/linea_terapeutica"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/list_guia_efectos_adversos"
            android:layout_below="@+id/textTitleGuia"
            android:layout_width="match_parent"
            android:background="@color/md_white_1000"
            android:layout_marginTop="10dp"
            android:layout_height="200dp"></ListView>



        <TextView
            android:id="@+id/textAreaHiperLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_guia_efectos_adversos"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:text="@string/politicas_privacidad" />

        <TextView
            android:id="@+id/textArea2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textAreaHiperLink"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/roche_2018" />

        <TextView
            android:id="@+id/textArea3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textArea2"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/roche_text" />


        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_notification_bar"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</layout>
