<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000">


        <include
            android:id="@+id/includedAppBarTitle"
            layout="@layout/view_app_bar_grados"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewRecomendacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/includedAppBarTitle"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:text="@string/desea_reportar"
            android:textColor="@color/title_color" />

        <View
            android:id="@+id/viewSeparator1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/textViewRecomendacion"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"></View>

        <TextView
            android:id="@+id/textViewDesc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewSeparator1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/text_desc_1"
            android:textAlignment="center"/>



        <TextView
            android:id="@+id/textViewemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/email_reporte"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="@color/md_black_1000"
            android:layout_below="@id/textViewDesc1"/>

        <Button
            android:id="@+id/btnEnviarAhora"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text=""
            android:background="@mipmap/back_btn_enviar"
            android:layout_below="@id/textViewemail" />

        <View
            android:id="@+id/viewSeparator2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/btnEnviarAhora"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"></View>

        <TextView
            android:id="@+id/textViewNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_desc2"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="@color/md_black_1000"
            android:layout_below="@id/viewSeparator2"/>

        <Button
            android:id="@+id/btnLlamarAhora"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:background="@mipmap/bkg_btn_llamar"
            android:layout_below="@id/textViewNumero" />

        <View
            android:id="@+id/viewSeparator3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/btnLlamarAhora"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"></View>

        <TextView
            android:id="@+id/textViewPolitica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewSeparator3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/politica_txt"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/textViewPoliticaDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPolitica"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/lorem_ipsum"
            android:textAlignment="center"/>




    </RelativeLayout>
</layout>
